--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "npm run build"
   functions = "functions/"
   publish = "public/"
+
+[context.production]
+  environment = { FAUNADB_ADMIN_SECRET = "fnAD5UqJ7LACAS1JE4t5BQfT7jLZxOlcqrenoUGz"}
