--- a/functions/todoList/package.json
+++ b/functions/todoList/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-link-http": "^1.5.17",
     "apollo-server-lambda": "^2.17.0",
+    "dotenv": "^8.2.0",
     "faunadb": "^3.0.1",
     "graphql": "^14.2.1",
     "graphql-tools": "^4.0.8",
